--- a/css/main.css
+++ b/css/main.css
@@ -1,22 +1,31 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat|Quicksand');
+@import url('https://fonts.googleapis.com/css?family=Bangers&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Cabin&display=swap');
 
-body{
-    margin-top: 70px;
-    background-color:#192a56;
-    font-family: 'Quicksand', sans-serif;
-}
+body {
+    height: 100%;
+    align-items: center;
+    justify-items: center;
+    font-family: 'Bangers', cursive;
+    background-color: #1e272e;
+  }
+ 
+
+
+
 
 h1{
-    color: white;
+    margin-top: 2rem;
+    color: #fff;
 }
 .card{
     color: #fff;
-    text-transform: uppercase;
+    /* text-transform: uppercase; */
     letter-spacing: 1px;
     text-align: center;
-    max-width: 18rem;
+    max-width: 22rem;
     margin: auto;
     border-radius: 10px;
+    font-family: 'Cabin', sans-serif;
     
 }
 
@@ -27,4 +36,6 @@ h1{
 
 .form-control{
     border-radius: 25px;
+    font-family: 'Cabin', sans-serif;
 }
+
